# chainlink-proof-validator

./: .env.example  .gitignore  Cargo.toml  README.md  bao.sol  call_contract.js  call_contract_2.js  chainlink_node_job.toml  contract_abi.json  ea_bridge_job.toml  example_job.toml  job.toml  package-lock.json  package.json  readme.md  req.json  test_contract_abi.json  validate.json
.github/workflows/: ci.yml  codecov.yml
hardhat_deploy_contract/: README.md  bao_slice.txt  hardhat.config.js  package-lock.json  package.json
hardhat_deploy_contract/contracts/: APIConsumer.sol  Bao.sol
hardhat_deploy_contract/scripts/: already_deployed.js  api_trigger.js  bao_trigger.js  deploy.js  deploy_api.js  deploy_bao.js
hardhat_test/: .env.example  README.md  bao_slice_2.txt  bao_slice_bad.txt  details.txt  hardhat.config.js  package-lock.json  package.json
hardhat_test/contracts/: APIChainLink.sol  BlockTime.sol  Lock.sol  Proofs.sol  test.sol
hardhat_test/scripts/: deploy.js  deploy_operator.js  shit.txt  test_deploy.js  test_ea.js  test_example_ea.js  test_trigger.js  trigger.js  trigger_proofs.js
hardhat_test/spec/jasmine_examples/: ProofSpec.js
hardhat_test/spec/support/: jasmine.json
hardhat_test/test/: integration_testing.js
proofs/: ethereum_proof_Bad.txt  ethereum_proof_Good.txt  filecoin_proof_Bad.txt  filecoin_proof_Good.txt
src/: do_things.rs  example.rs  lib.rs  main.rs  proof_utils.rs  testing.rs  types.rs  validate.rs
src/example/: mod.rs
src/proof_utils/: mod.rs
src/types/: mod.rs
src/validate/: mod.rs
