[package]
name = "rust_chainlink_ea_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "*"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
anyhow = "1.0"
dotenv = "0.15.0"
reqwest = "0.11"
