[package]
name = "rust_chainlink_ea_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "*"
serde_json = "*"
anyhow = {version = "1.0", features = ["std", "backtrace"] }
banyan-shared ={path = "/Users/jonahkaye/Desktop/Banyan/banyan-shared-rs"}
dotenv = "0.15.0"
reqwest = "0.11.11"
log = "0.4.17"
tokio = "1.21.2"
rand = "0.8.5"
ethers = { git = "https://github.com/gakonst/ethers-rs" }